--- a/requirements.txt
+++ b/requirements.txt
@@ -8,17 +8,20 @@ contourpy==1.3.1
 cycler==0.12.1
 debugpy==1.8.13
 decorator==5.2.1
+-e git+https://github.com/zhangchengyue/ECG_Classification.git@470edf0b5fb198d7736f9a4e61aef6de39b9eb56#egg=ecg_classification
 executing==2.2.0
 filelock==3.13.1
 fonttools==4.56.0
 fsspec==2024.6.1
 h5py==3.13.0
 idna==3.10
+iniconfig==2.1.0
 ipykernel==6.29.5
 ipython==9.0.2
 ipython_pygments_lexers==1.1.1
 jedi==0.19.2
 Jinja2==3.1.4
+joblib==1.4.2
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 keras==3.9.1
@@ -41,6 +44,7 @@ parso==0.8.4
 pexpect==4.9.0
 pillow==11.2.0
 platformdirs==4.3.7
+pluggy==1.5.0
 prompt_toolkit==3.0.50
 psutil==7.0.0
 ptyprocess==0.7.0
@@ -48,16 +52,19 @@ pure_eval==0.2.3
 pycparser==2.22
 Pygments==2.19.1
 pyparsing==3.2.3
+pytest==8.3.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
 pyzmq==26.3.0
 requests==2.32.3
 rich==14.0.0
+scikit-learn==1.6.1
 scipy==1.15.2
 six==1.17.0
 soundfile==0.13.1
 stack-data==0.6.3
 sympy==1.13.1
+threadpoolctl==3.6.0
 torch==2.6.0+cpu
 torchaudio==2.6.0+cpu
 torchvision==0.21.0+cpu
